# helloc23

./: .gitignore  CMakeLists.txt  employee.cppm  main.cpp
docs/plans/: 2026-03-02-hello-world-web-design.md  2026-03-02-hello-world-web-implementation.md
